edit color main

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
 *
 * ======================================================= */
 :root {
-  --primary: #5B6C22;
-  --primary-rgb: 155, 151, 153;
+  --primary: #606b51;
+  --primary-rgb: 96, 107, 81;
 }
 body {
   font-family: "Work Sans", Arial, sans-serif;
