--- a/css/style.css
+++ b/css/style.css
@@ -558,6 +558,7 @@ h1, h2, h3, h4, h5, h6, figure {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
+  opacity: 0.9;
 }
 @media screen and (max-width: 480px) {
   .timeline > li > .timeline-badge {
