--- a/css/style.css
+++ b/css/style.css
@@ -1188,7 +1188,7 @@ form label {
 }
 
 .fh5co-heading {
-  margin-top: 3em;
+  /* margin-top: 3em; */
   margin-bottom: 5em;
 }
 .fh5co-heading.fh5co-heading-sm {
