--- a/css/style.css
+++ b/css/style.css
@@ -1347,7 +1347,7 @@ form label {
 
 #fh5co-started {
   position: relative;
-  padding-bottom: 30px;
+  padding-bottom: 40px;
 }
 #fh5co-started .overlay {
   position: absolute;
@@ -1481,6 +1481,24 @@ form label {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+#fh5co-offcanvas ul li a {
+  display: block;
+  padding: 10px 20px;
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  transition: all 0.3s ease;
+}
+
+#fh5co-offcanvas ul li a:hover {
+  color: #fff;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+#fh5co-offcanvas ul li:last-child a {
+  border-bottom: none;
 }
 #fh5co-offcanvas ul li > ul {
   padding-left: 20px;
